# 2026-SW-EDMONDAI

./: .env.example  .gitignore  CLAUDE.md  README.md  STEP_BY_STEP.md  docker-compose.yml  info.md  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/agents/: MIGRATION.md  README.md  infographic.md
.github/agents/orchestrator/: runbook.md  system-prompt.md
.github/agents/prompts/: 01-platform-bootstrap.md  02-frontend-dashboard.md  03-backend-api.md  04-data-modeling.md  05-async-pipeline.md  06-recommendation-logic.md  07-qa-reliability.md  08-metrics-observability.md
.github/agents/shared/: common-context.md
.github/agents/workflows/: 00-master-workflow.md  handoff-schema.yaml  m1-foundation.md  m1-task-breakdown.md  (+4 more)
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  main.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init_core_schema.py
apps/api/core/: auth.py  config.py  deps.py  exceptions.py  logging.py  metrics.py  middleware.py
apps/api/models/: __init__.py  audit.py  core.py  policy.py
apps/api/routes/: auth.py  health.py
apps/api/schemas/: auth.py  response.py
apps/api/tests/: test_auth.py  test_health.py
apps/web/: Dockerfile  package.json
apps/worker/: Dockerfile  __init__.py  celery_app.py
docs/: 01_신청서.md  02_수행계획서.md  03_결과보고서.md  IA-wireframe.md  api.md  db-schema.md  mvp.md  prd.md  techstack.md  서식일체_통합본.md
docs/agents/: agent-prompts.md  orchestrator-prompt.md  workflow.md
infrastructure/docker/: prometheus.yml
(+7 files in other folders)
